--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
@@ -28,6 +28,7 @@
                 <option value="0">Processing</option>
                 <option value="1">Completed</option>
                 <option value="2">Failed</option>
+                <option value="errors">With Errors</option>
             </select>
         </div>
         <button type="button" class="btn btn-default" data-mvcgrid-apply-filter="click">Apply</button>
