--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
@@ -8,9 +8,14 @@
     <div class="form-inline">
         <div class="form-group">
             <span class="filter-label">Date:</span>
-            <input type="text" class="form-control"
-                   data-mvcgrid-type="filter" data-mvcgrid-option="StartTime" />
+            <div class='input-group date' id='datetimepicker'>
+                <input data-mvcgrid-type="filter" data-mvcgrid-option="StartTime" type='text' class="form-control" />
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
         </div>
+
         <div class="form-group">
             <span class="filter-label">CommandName:</span>
             <input type="text" class="form-control"
@@ -28,10 +33,12 @@
                 <option value="0">Processing</option>
                 <option value="1">Completed</option>
                 <option value="2">Failed</option>
+                <option value="3">Aborted</option>
                 <option value="errors">With Errors</option>
             </select>
         </div>
-        <button type="button" class="btn btn-default" data-mvcgrid-apply-filter="click">Apply</button>
+        <button type="button" class="btn btn-default" data-mvcgrid-apply-filter="click">Apply Filters</button>
+        <button type="button" class="btn btn-default" onclick="setAbortedStatusToItems()">Abort Selected</button>
     </div>
 </div>
 
