--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -15,8 +15,13 @@
     <link href="https://kendo.cdn.telerik.com/2015.3.930/styles/kendo.bootstrap.min.css" rel="stylesheet" />
     @* kendo.dataviz.min.css / kendo.dataviz.bootstrap.min.css *@
 
-    <script src="https://kendo.cdn.telerik.com/2015.3.930/js/jquery.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2015.3.930/js/kendo.all.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
     <script src="~/MVCGridHandler.axd/script.js"></script>
 
     <style type="text/css" media="screen">
