Move set aborted button to the right.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
@@ -38,7 +38,7 @@
             </select>
         </div>
         <button type="button" class="btn btn-default" data-mvcgrid-apply-filter="click">Apply Filters</button>
-        <button type="button" class="btn btn-default" onclick="setAbortedStatusToItems()">Abort Selected</button>
+        <button type="button" class="btn btn-default abort" onclick="setAbortedStatusToItems()">Abort Selected</button>
     </div>
 </div>
 
