--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -37,8 +37,12 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <a class="navbar-brand" href="@Url.Action("History", "JobsExecution")">Jobs History</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="@Url.Action("Launch", "JobsRequest")">Job Requests</a></li>
+                </ul>
             </div>
         </div>
     </nav>
