--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group col-md-5">
                 <span class="filter-label">Arguments:</span>
-                <input type="text" id="argumentInput" class="form-control" placeholder=""/>
+                <input type="text" id="argumentInput" class="form-control" placeholder="" />
             </div>
             <div class="form-group col-md-3">
                 <span class="filter-label">Time:</span>
@@ -38,5 +38,7 @@
         </div>
     </div>
 </div>
+
+@Html.MVCGrid("JobRequests")
 
 <script src="~/Content/scripts/jobLaunch.js"></script>
