--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/SearchTerm.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/SearchTerm.cshtml
@@ -4,10 +4,11 @@
     @if (!Model.CustomDates)
     {
         <script>
-    function ChangeMonth(month) {
-        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, keywId = Model.KeywordId, month = "startVal" }))';
-        location.href = url.replace('startVal', month);
-    }
+            function ChangeMonth(month) {
+                var url =
+                    '@Html.Raw(Url.Action(null, new {platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, keywId = Model.KeywordId, start = "startVal"}))';
+                location.href = url.replace('startVal', month);
+            }
         </script>
     }
 }
