--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Site.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Site.cshtml
@@ -1,15 +1,16 @@
 ﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.TDStatsVM
 
 @section scripts {
-@if (!Model.CustomDates)
-{
-<script>
-    function ChangeMonth(month) {
-        var url = '@Html.Raw(Url.Action(null, new { platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, start = "startVal" }))';
-        location.href = url.replace('startVal', month);
+    @if (!Model.CustomDates)
+    {
+        <script>
+            function ChangeMonth(month) {
+                var url =
+                    '@Html.Raw(Url.Action(null, new {platform = Model.PlatformCode, campId = Model.CampaignId, acctId = Model.AccountId, start = "startVal"}))';
+                location.href = url.replace('startVal', month);
+            }
+        </script>
     }
-</script>
-}
 }
 <h2>External Accounts - Raw Stats, by site</h2>
 @if (Model.CustomDates)
