Added auto shutdown mechanism for commands.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
@@ -34,6 +34,7 @@
                 <option value="1">Completed</option>
                 <option value="2">Failed</option>
                 <option value="3">Aborted</option>
+                <option value="4">Aborted by timeout</option>
                 <option value="errors">With Errors</option>
             </select>
         </div>
