--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsExecution/History.cshtml
@@ -3,6 +3,7 @@
 <link href="~/Content/css/jobHistory.css" rel="stylesheet" />
 
 <h2>Job Execution History</h2>
+<p>*Time zone on this page (server time zone) - @ViewBag.ServerTimeZone</p>
 
 <div class="well">
     <div class="form-inline">
