--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
@@ -1,7 +1,10 @@
 ﻿@using MVCGrid.Web
 
 <link href="~/Content/css/jobLaunch.css" rel="stylesheet" />
+
 <h2>Job Request Launch</h2>
+<p>*Time zone on this page (server time zone) - @ViewBag.ServerTimeZone</p>
+<p id="serverTimeZoneUtcOffsetInHours" hidden>@ViewBag.ServerTimeZone.BaseUtcOffset.Hours</p>
 
 <div class="well">
     <div class="form-inline container-fluid">
