--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/Admin/Views/JobsRequest/Launch.cshtml
@@ -1,10 +1,14 @@
 ﻿@using MVCGrid.Web
+@{
+    var timeZoneUtcOffsetInHours = @ViewBag.ServerTimeZone.GetUtcOffset(DateTime.Now).Hours;
+    var timeZoneName = @ViewBag.ServerTimeZone.StandardName + " (UTC " + timeZoneUtcOffsetInHours.ToString("+0;-#") + "h)";
+}
 
 <link href="~/Content/css/jobLaunch.css" rel="stylesheet" />
 
 <h2>Job Request Launch</h2>
-<p>*Time zone on this page (server time zone) - @ViewBag.ServerTimeZone</p>
-<p id="serverTimeZoneUtcOffsetInHours" hidden>@ViewBag.ServerTimeZone.BaseUtcOffset.Hours</p>
+<p>*Time zone on this page (server time zone) - @timeZoneName</p>
+<p id="serverTimeZoneUtcOffsetInHours" hidden>@timeZoneUtcOffsetInHours</p>
 
 <div class="well">
     <div class="form-inline container-fluid">
