--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Facebook/Totals.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Facebook/Totals.cshtml
@@ -20,6 +20,7 @@
             <th colspan="1">PostClickRev</th>
             <th colspan="1">PostViewRev</th>
             <th colspan="1">CostTotal</th>
+            <th colspan="1">ReachTotal</th>
         </tr>
         <tr>
             <th>ID</th>
@@ -39,6 +40,7 @@
                 <td>@accountSummary.PostClickRevTotal</td>
                 <td>@accountSummary.PostViewRevTotal</td>
                 <td>@accountSummary.CostTotal</td>
+                <td>@accountSummary.ReachTotal</td>
             </tr>
         }
     </table>
