DIRAGBA-405 Implement base structure of the MatchPortal

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/_ViewStart.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/_ViewStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
-    Layout = "Shared/_LayoutTD.cshtml";
+    Layout = "Shared/_LayoutMatchPortal.cshtml";
     ViewContext.Controller.ViewBag.UseTableCSS = true;
 }
