--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Shared/_LayoutMatchPortal.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Shared/_LayoutMatchPortal.cshtml
@@ -5,42 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
     <link href="~/Content/DA.css" rel="stylesheet" />
-
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://kendo.cdn.telerik.com/2015.3.930/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
     <link href="https://kendo.cdn.telerik.com/2015.3.930/styles/kendo.bootstrap.min.css" rel="stylesheet" />
-@* kendo.dataviz.min.css / kendo.dataviz.bootstrap.min.css *@
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/chosen/1.7.0/chosen.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.css" rel="stylesheet">
 
     <script src="https://kendo.cdn.telerik.com/2015.3.930/js/jquery.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2015.3.930/js/kendo.all.min.js"></script>
-@*    kendo.timezones? *@
-    @if (ViewBag.UseTableCSS != null && ViewBag.UseTableCSS) {
-<style type="text/css" media="screen">
-body {
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-table {
-    border:1px solid black;
-    border-collapse:collapse;
-}
-
-table th,td {
-    border:1px solid black;
-    padding:2px 4px;
-}
-</style>
-    }
+    <script src="https://cdn.jsdelivr.net/chosen/1.7.0/chosen.jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 </head>
 <body>
-@RenderBody()
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+            </div>
+        </div>
+    </nav>
+    <div class="container" style="margin-top: 3em">
+        @RenderBody()
+    </div>
     @RenderSection("scripts", required: false)
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</body>
+    </body>
 </html>
